Fix scrolling of main page on iOS 8 modals
* Scrolling to the modal won't move the underlaying page any more.
* Enabled inertial scrolling on the modal too (makes it much easier to get to
the end of the list when you have a lot of collections)

Bug: T95018

--- a/resources/ext.gather.watchstar/contentOverlay.less
+++ b/resources/ext.gather.watchstar/contentOverlay.less
@@ -5,8 +5,11 @@
 @backgroundYOffset: 0.75em;
 .gather-overlay-enabled {
 	#mw-mf-page-center {
-	  overflow: hidden;
-	  display: block;
+		position: fixed;
+		width: 100%;
+		overflow: hidden;
+		display: block;
+		-webkit-overflow-scrolling: touch;
 	}
 }
 
